# coronascope

./: .cproject  .project  README.txt
Data/: coauthorship.tlp  coauthorship_errors.xml  coauthorship_top_twelve-seq.xml  coauthorship_top_twelve-seq_colorblindsafe.xml  coauthorship_top_twelve.xml  graph_layout_view.tlp  graph_layout_view.xml  graph_layout_view_colorblindsafe.xml  graph_layout_view_with_clusters.tlp  marvel.tlp  pvr.tlp  subsampled_marvel.tlp  ten_nodes.tlp  test_graph.tlp  test_graph.xml
Source/: CMakeLists.txt  CMakeOptions.cmake  CoronaScopeDocMain.h  vtkcsmConfigure.h.in
Source/Examples/Cxx/: CMakeLists.txt
Source/Examples/Cxx/AnnotatedGraphView/: AnnotatedGraphView.cxx  CMakeLists.txt
Source/Examples/Cxx/CoronaScope/: About.cxx  About.h  About.ui  BrewerColorDelegate.cxx  BrewerColorDelegate.h  BrewerColorSet.cxx  BrewerColorSet.h  BrewerColorTableModel.cxx  BrewerColorTableModel.h  CMakeLists.txt  Doxyfile  MainApp.cxx  MainWindow.cxx  MainWindow.h  MainWindow.ui  Pipeline.cxx  Pipeline.h  Preferences.cxx  Preferences.h  Preferences.ui  ScreenShot.cxx  ScreenShot.h  ScreenShot.ui  application.qrc
Source/Examples/Cxx/CoronaScope/Resources/: ColorBrewer.txt  corona.xpm
Source/Examples/Cxx/SimpleGraphAnnotations/: CMakeLists.txt  SimpleGraphAnnotations.cxx
Source/GUISupport/: CMakeLists.txt  vtkMyQtAnnotationLayersModelAdapter.cxx  vtkMyQtAnnotationLayersModelAdapter.h  vtkcsmGUISupportWin32Header.h
Source/IO/: CMakeLists.txt  note.txt  vtkAnnotationLayersSerializer.cxx  vtkAnnotationLayersSerializer.h  vtkPVXMLElement.h  vtkPVXMLParser.h  vtkSelectionSerializer.h  vtkcsmIOWin32Header.h
Source/Infovis/: CMakeLists.txt  vtkFlightMapFilter.cxx  vtkFlightMapFilter.h  vtkMySpanTreeLayoutStrategy.cxx  vtkMySpanTreeLayoutStrategy.h  vtkOGDFLayoutStrategy.cxx  vtkOGDFLayoutStrategy.h  vtkcsmInfovisWin32Header.h
Source/Utilities/Doxygen/: CMakeLists.txt  doc_makeall.sh.in  doxyfile.in
Source/Views/: CMakeLists.txt  vtkAnnotatedGraphRepresentation.cxx  vtkAnnotatedGraphRepresentation.h  vtkAnnotatedGraphView.cxx  vtkAnnotatedGraphView.h  vtkInteractorStyleAnnotate2D.cxx  vtkInteractorStyleAnnotate2D.h  vtkcsmViewsWin32Header.h
Source/Widgets/: CMakeLists.txt  vtkOffScreenRepresentation.cxx  vtkOffScreenRepresentation.h  vtkOffScreenRepresentationImpl.cxx  vtkOffScreenRepresentationImpl.h  vtkOffScreenWidget.cxx  vtkOffScreenWidget.h  vtkcsmWidgetsWin32Header.h
Source/Wrapping/Tcl/: MakePackages.tcl
Source/Wrapping/Tcl/vtkmy/: pkgIndex.tcl  vtkmy.tcl
Source/Wrapping/Tcl/vtkmyunsorted/: pkgIndex.tcl  vtkmyunsorted.tcl
